<resources>
    <!-- Main -->
    <string name="app_name">Fianzas_Personales</string>
    <string name="titulo_bienvenido">Domitzu Fiance</string>
    <string name="titulo_IniciarSesion">Iniciar Sesion</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="boton_registrarte">Registrarte</string>
    <string name="boton_iniciarSesion">Ingresar</string>

    <!-- Inicio Sesion -->
    <string name="correo">Correo:</string>
    <string name="clave">Contraseña:</string>

    <!-- Registro -->
    <string name="titulo_registro">Registrarte</string>
    <string name="nombre">Nombre(s):</string>
    <string name="apellidos">Apellidos:</string>
    <string name="confirmar_clave">Confirmar contraseña:</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="terminos">Acepto términos y condiciones</string>

    <!-- Gestor finanzas -->
    <string name="titulo_gestor_finanzas">Gestor finanzas</string>
    <string name="titulo_bienvenido_nombre">Bienvenido: (nombre)</string>

    <!-- Registro de ingresos o gastos -->
    <string name="registro_ingresos">Registro ingreso/gasto</string>
    <string name="cantidad">Cantidad $$$:</string>
    <string name="categoria">Alimentos/Facturas/Compras/etc</string>
    <string name="tipo_ingreso">Ingreso/Gasto</string>
    <string name="fecha">Fecha:</string>
    <string name="descripcion">Descripción:</string>
    <string name="titulo_ingresos">Ingresos</string>
    <string name="boton_ver">Ver mas</string>
    <string name="boton_registrar">Registrar</string>
    <string name="ingresa_numero_valido">Por favor, ingresa un número válido</string>
    <string name="ingreso_gasto_registrado">Ingreso/Gasto registrado exitosamente</string>
    <string name="ingreso">Ingreso</string>
    <string name="gasto">Gasto</string>
    <string name="btn_registro_gasto">Registrar</string>

    <!-- Spinner mes (combobox) -->
    <string name="enero">ENERO</string>
    <string name="febrero">FEBRERO</string>
    <string name="marzo">MARZO</string>
    <string name="abril">ABRIL</string>
    <string name="mayo">MAYO</string>
    <string name="junio">JUNIO</string>
    <string name="julio">JULIO</string>
    <string name="agosto">AGOSTO</string>
    <string name="septiembre">SEPTIEMBRE</string>
    <string name="octubre">OCTUBRE</string>
    <string name="noviembre">NOVIEMBRE</string>
    <string name="diciembre">DICIEMBRE</string>

    <!-- Spinner categoria -->
    <string name="alimentos">ALIMENTOS</string>
    <string name="facturas">FACTURAS</string>
    <string name="compras">COMPRAS</string>
    <string name="transportes">TRANSPORTES</string>
    <string name="otros">OTROS</string>

    <!-- Otros -->
    <string name="boton_regresar">Regresar</string>
    <string name="title_activity_side_bard">sideBardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menú -->
    <string name="menu_home">Inicio sesion</string>
    <string name="menu_gallery">Registro</string>
    <string name="menu_slideshow">Registro Ingresos</string>
</resources>

