<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Login"
    android:orientation="vertical"
    android:background="@color/azul1.1">

    <TextView
        android:id="@+id/registro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/titulo_registro"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nombre_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/nombre"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#B0BEC5" />

    <EditText
        android:id="@+id/correo_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/correo"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#B0BEC5" />
    <EditText
        android:id="@+id/clave_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/clave"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#B0BEC5" />
    <EditText
        android:id="@+id/confirmarClave_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/confirmar_clave"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#B0BEC5" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:paddingTop="10dp"
        android:text="@string/boton_registrarte"
        android:textColor="@color/azul1.0"
        android:textStyle="bold" />
</LinearLayout>
